--- a/custom/majalorkowska-com/input/config/theme.config.json
+++ b/custom/majalorkowska-com/input/config/theme.config.json
@@ -10,11 +10,11 @@
         "pageWidth": "66rem",
         "pageMargin": "4vw",
         "entryWidth": "62ch",
-        "frontSource": "default",
+        "frontSource": "post",
         "frontPost": "",
         "frontGallery": false,
         "textHero": "<p>Your photography stories</p>\n<h1>Capturing life with natural light <i>photography</i></h1>",
-        "filters": true,
+        "filters": false,
         "filtersLabel": "",
         "filtersAllPhrase": "All",
         "filtersType": "tags",
@@ -27,20 +27,20 @@
         "layoutAuthor": "--3",
         "relatedPostsNumber": "3",
         "cardsLayout": "default",
-        "cardsImgScale": "1.3",
-        "cardsDate": true,
-        "navbarHeight": "6rem",
+        "cardsImgScale": "1",
+        "cardsDate": false,
+        "navbarHeight": "5rem",
         "submenu": "auto",
         "submenuWidth": "240",
         "mobilemenu": "sidebar",
         "mobilemenuExpandableSubmenus": true,
-        "primaryColor": "#FF80AB",
+        "primaryColor": "#42B391",
         "textColor": "#111111",
-        "headingsColor": "#111111",
-        "fontBody": "system-ui",
-        "fontHeadings": "system-ui",
-        "fontMenu": "var(--body-font)",
-        "fontLogo": "var(--body-font)",
+        "headingsColor": "#192A52",
+        "fontBody": "quicksand",
+        "fontHeadings": "bitter",
+        "fontMenu": "var(--heading-font)",
+        "fontLogo": "var(--heading-font)",
         "minFontSize": "1",
         "maxFontSize": "1.2",
         "lineHeight": "1.6",
@@ -56,11 +56,11 @@
         "shareLinkedin": false,
         "shareBuffer": false,
         "shareWhatsApp": false,
-        "copyrightText": "Powered by Publii",
-        "socialButtons": false,
+        "copyrightText": "Maja Lorkowska",
+        "socialButtons": true,
         "socialFacebook": "",
         "socialTwitter": "",
-        "socialInstagram": "",
+        "socialInstagram": "https://www.instagram.com/majalorko/",
         "socialLinkedin": "",
         "socialVimeo": "",
         "socialPinterest": "",
@@ -69,8 +69,8 @@
         "createSearchPage": false,
         "galleryItemGap": "0.5rem",
         "galleryLightboxStyle": "pswp--dark",
-        "galleryLightboxOpacity": "0.7",
-        "galleryAdvanced": false,
+        "galleryLightboxOpacity": "0.9",
+        "galleryAdvanced": true,
         "galleryCounter": true,
         "galleryZoom": true,
         "galleryFullscreen": true,
@@ -83,20 +83,12 @@
         "formatDate": "MMMM D, YYYY",
         "formatDateCustom": "HH:mm:ss YY/MM/DD",
         "lazyLoadEffect": "fadein",
-        "faviconUpload": "",
+        "faviconUpload": "media/website/favicon-3.ico",
         "faviconExtension": "image/x-icon"
     },
     "postConfig": {
-        "featuredImageWidth": "post__image--wide",
-        "displayAuthor": 1,
-        "displayDate": 1,
-        "displayLastUpdatedDate": 1,
-        "displayTags": 1,
-        "displayShareButtons": 1,
-        "displayPostNavigation": 1,
-        "displayAuthorBio": 1,
-        "displayRelatedPosts": 1,
-        "displayComments": 0
+        "externalLink": "",
+        "customDate": ""
     },
     "tagConfig": {
         "displayPostCounter": "0",
@@ -104,13 +96,13 @@
         "displayPostList": 1
     },
     "authorConfig": {
-        "displayAvatar": 1,
-        "displayPostCounter": 1,
-        "displayDescription": 1,
-        "displayWebsite": 1,
-        "displayPostList": 1
+        "displayAvatar": "1",
+        "displayPostCounter": "0",
+        "displayDescription": "1",
+        "displayWebsite": "0",
+        "displayPostList": "0"
     },
     "defaultTemplates": {
-        "post": ""
+        "post": "maja_picture"
     }
 }
